fix: Use min-height:100vh on small viewport as well (#1944)
* fix: Use min-height:100vh on small viewport as well

* Revert inline-size and block-size back to width and height for now

--- a/packages/brand-moment/src/BrandMoment.scss
+++ b/packages/brand-moment/src/BrandMoment.scss
@@ -9,7 +9,8 @@ $breakpoint-xl: 1366px; // TODO: create an xl breakpoint in design-tokens and re
 // --------------------------------
 
 .body {
-  inline-size: 100%;
+  width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,18 +28,12 @@ $breakpoint-xl: 1366px; // TODO: create an xl breakpoint in design-tokens and re
   }
 }
 
-@media (min-width: $layout-breakpoints-large) {
-  .body {
-    min-block-size: 100vh;
-  }
-}
-
 // --------------------------------
 // Reusable container
 // --------------------------------
 
 .container {
-  max-inline-size: $layout-content-max-width;
+  max-width: $layout-content-max-width;
   margin: 0 auto;
   padding: 0 $spacing-md;
 }
@@ -106,8 +101,8 @@ $breakpoint-xl: 1366px; // TODO: create an xl breakpoint in design-tokens and re
 }
 
 .leftInner {
-  inline-size: 100%;
-  max-inline-size: 525px;
+  width: 100%;
+  max-width: 525px;
 }
 
 .right {
@@ -118,7 +113,7 @@ $breakpoint-xl: 1366px; // TODO: create an xl breakpoint in design-tokens and re
 }
 
 .rightInner {
-  max-inline-size: 543px;
+  max-width: 543px;
 }
 
 .secondaryAction {
@@ -179,7 +174,7 @@ $breakpoint-xl: 1366px; // TODO: create an xl breakpoint in design-tokens and re
   margin-inline-start: $spacing-xs;
 
   > img {
-    max-inline-size: 133px;
+    max-width: 133px;
   }
 }
 
